se agregaron cambios al about

--- a/about.html
+++ b/about.html
@@ -342,7 +342,7 @@
     <!--End Main Header -->
 
     <!--Page Title-->
-    <section class="page-title" style="background-image:url(images/background/8.jpg);">
+    <section class="page-title" style="background-image:url(images/background/maconsultora-mantenimiento2.jpg);">
         <div class="auto-container">
             <div class="inner-container clearfix">
                 <h1>ABOUT US</h1>
@@ -360,9 +360,9 @@
         <div class="auto-container">
             <div class="row clearfix">
                 <!-- Content Column -->
-                <div class="content-column col-lg-6 col-md-12 col-sm-12">
-                    <h2>Welcome to Autowork</h2>
-                    <h4>Repair and Car Service</h4>
+                <div class="content-column col-lg-12 col-md-12 col-sm-12 col-xl-12">
+                    <h2 class="text-center">La Empresa</h2>
+                    <h4 class="text-center">Repair and Car Service</h4>
                     <div class="primary-text">We offer a wide range of hydraulic cartridge valves, customized hydraulic integrated manifolds and valves for hydraulic breaking systems</div>
                     <div class="text">We work with clients big and small across a range of sectors and we utilise all forms of media to get your name out there in a way that’s right for you. We have a number of different teams within our agency that specialise in different areas of business so you can be sure that you won’t receive a generic service and although we can’t boast years and years of service we can ensure you that is a good thing in this industry</div>
                     <ul class="list-style-one clearfix">
@@ -374,31 +374,11 @@
                 </div>
 
                 <!-- Image Column -->
-                <div class="image-column col-lg-6 col-md-12 col-sm-12">
-                    <div class="image-box">
-                        <a href="about.html"><img src="images/resource/about-img.jpg" alt=""></a>
-                    </div>
-                    <div class="row clearfix">
-                        <div class="column col-lg-6 col-md-6 col-sm-12">
-                            <h3><a href="about.html">Our Mission</a></h3>
-                            <p>Our most popular service is our Virtual Receptionist. We know that sometimes it’s difficult to get to the phone</p>
-                            <a href="about.html" class="read-more">Read More</a>
-                        </div>
-
-                        <div class="column col-lg-6 col-md-6 col-sm-12">
-                            <h3><a href="about.html">Our History</a></h3>
-                            <p>If you are in the middle of something and you don’t want to miss that important call that could be the start of an exciting</p>
-                            <a href="about.html" class="read-more">Read More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+           
     <!-- End About Us -->
 
     <!-- Fact counter -->
-    <section class="fun-fact-section" style="background-image:url(images/background/1.jpg);">
+    <section class="fun-fact-section col-xl-12"  style="background-image:url(images/background/maconsultora-mantenimiento2.jpg);">
         <div class="auto-container">
             <div class="row clearfix">
                 <!-- Count box -->
