se agregaron animaciones al proyeceto

--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
 <link href="css/responsive.css" rel="stylesheet">
+<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 <!--Color Switcher Mockup-->
 <link href="css/color-switcher-design.css" rel="stylesheet">
 
@@ -27,7 +28,7 @@
 </head>
 
 <body>
-<div class="page-wrapper">
+<div class="page-wrapper wow fadeInUp">
 
     <!-- Preloader -->
     <div class="preloader"></div>
@@ -342,10 +343,10 @@
     <!--End Main Header -->
 
     <!--Page Title-->
-    <section class="page-title" style="background-image:url(images/background/maconsultora-mantenimiento2.jpg);">
+    <section  class="page-title wow fadeInUp " style="background-image:url(images/greasy-mechanic-hand-reaches-under-hood-free-photo.webp);background-attachment: center;">
         <div class="auto-container">
             <div class="inner-container clearfix">
-                <h1>ABOUT US</h1>
+                <h1>SOBRE NOSOTROS</h1>
                 <ul class="bread-crumb clearfix">
                     <li><a href="index.html">Home</a></li>
                     <li>About Us</li>
@@ -356,49 +357,50 @@
     <!--End Page Title-->
 
     <!-- About Us -->
-    <section class="about-us">
+    <section class="about-us wow">
         <div class="auto-container">
             <div class="row clearfix">
                 <!-- Content Column -->
-                <div class="content-column col-lg-12 col-md-12 col-sm-12 col-xl-12">
+                <div data-aos="fade-up"
+                data-aos-duration="3000" class="content-column col-lg-12 col-md-12 col-sm-12 col-xl-12 ">
                     <h2 class="text-center">La Empresa</h2>
-                    <h4 class="text-center">Repair and Car Service</h4>
-                    <div class="primary-text">We offer a wide range of hydraulic cartridge valves, customized hydraulic integrated manifolds and valves for hydraulic breaking systems</div>
-                    <div class="text">We work with clients big and small across a range of sectors and we utilise all forms of media to get your name out there in a way that’s right for you. We have a number of different teams within our agency that specialise in different areas of business so you can be sure that you won’t receive a generic service and although we can’t boast years and years of service we can ensure you that is a good thing in this industry</div>
-                    <ul class="list-style-one clearfix">
-                        <li>Professional car cleaning</li>
-                        <li>Monthly car inspections</li>
-                        <li>Car painting assets and service</li>
-                        <li>Creating new car assets and wheels</li>
+                    <h4 class="text-center">Reparacion y servicio automotriz</h4>
+                    <div class="primary-text">Ofrecemos una amplia variedad de servicios que se ajustan a las necesidades del cliente. </div>
+                    <div class="text">Trabajamos con clientes grandes y pequeños en una variedad de sectores y utilizamos todas las formas de medios para dar a conocer su nombre de la manera adecuada para usted. Tenemos varios equipos diferentes dentro de nuestra agencia que se especializan en diferentes áreas de negocios, por lo que puede estar seguro de que no recibirá un servicio genérico y, aunque no podemos presumir de años y años de servicio, podemos asegurarle estamos a la altura  de las necesidades del cliente. </div>
+                    <ul class="list-style-one  clearfix">
+                        <li>Limpieza de coches profesional</li>
+                        <li>Inspecciones mensuales de automóviles</li>
+                        <li>Activos y servicio de pintura de automóviles</li>
+                        <li>Creación de nuevos activos y ruedas para automóviles</li>
                     </ul>
                 </div>
 
                 <!-- Image Column -->
-                <div class="row row-cols-1 row-cols-md-2 g-4 m-5">
-                    <div class="col ">
-                      <div class="card">
+                <div class="row mx-1 pt-4 px-2 row-cols-1 row-cols-md-2 g-4 my-5 bg-light wow fadeInUp">
+                    <div class=" col-lg-4 col-md-6 col-sm-12 mb-4">
+                      <div data-aos="slide-right" class="card">
                         <img src="./images/mision.jpg " class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Mision</h5>
-                          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                          <p class="card-text"> Proporcionar un servicio de calidad para brindar soluciones fiables y duraderas que conserven los autos en un estado óptimo, eficiente y seguro por medio de personal altamente capacitado, motivado y productivo que tiene como principal interés la seguridad y satisfacción de nuestros clientes.</p>
                         </div>
                       </div>
                     </div>
-                    <div class="col ">
-                      <div class="card">
+                    <div class=" col-lg-4 col-md-6 col-sm-12 mb-4">
+                      <div data-aos="zoom-out" class="card ">
                         <img src="./images/vision.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Vision</h5>
-                          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                          <p class="card-text">Llegar a ser el taller líder y confiable a nivel zona, en los próximos 3 años, una vez cumplido ese objetivo mantenernos como los mejores en el mercado, ofreciendo el servicio para automóviles modernos y unidades diésel, siendo reconocidos por la calidad en nuestros servicios, honestidad y precios justos.</p>
                         </div>
                       </div>
                     </div>
-                    <div class="col ">
-                      <div class="card">
+                    <div class="col-lg-4 col-md-12 col-sm-12 mb-4">
+                      <div data-aos="slide-left" class="card">
                         <img src="./images/valores.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Valores</h5>
-                          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                          <h5 class="card-title">Politicas de Calidad</h5>
+                          <p class="card-text"> Conocer las necesidades del cliente y satisfacerlas en todas las fases de la relación con él, asegurando el cumplimiento de los requisitos exigidos por el mismo. Para ello todas las personas de la organización deben implicarse en orientar su trabajo pensando siempre en la satisfacción de nuestros clientes.</p>
                         </div>
                       </div>
                     </div>
@@ -407,15 +409,16 @@
     <!-- End About Us -->
     
     <!-- Fact counter -->
-    <section class="fun-fact-section col-xl-12"  style="background-image:url(images/background/maconsultora-mantenimiento2.jpg);">
+    <section data-aos="fade-up"
+    data-aos-duration="3000" class="fun-fact-section col-xl-12 "  style="background-image:url(images/background/maconsultora-mantenimiento2.jpg);">
         <div class="auto-container">
             <div class="row clearfix">
                 <!-- Count box -->
                 <div class="count-box col-lg-3 col-md-6 col-sm-12">
                     <div class="inner-box">
                         <div class="icon-box"><span class="flaticon-avatar-1"></span></div>
-                        <span class="count-text" data-speed="2000" data-stop="1035">0</span>
-                        <div class="counter-title"><h5>Total experts</h5></div>
+                        <span class="count-text" data-speed="2000" data-stop="100">0</span>
+                        <div class="counter-title"><h5>Expertos totales</h5></div>
                     </div>
                 </div>
 
@@ -423,8 +426,8 @@
                 <div class="count-box col-lg-3 col-md-6 col-sm-12">
                     <div class="inner-box">
                         <div class="icon-box"><span class="flaticon-transport"></span></div>
-                        <span class="count-text" data-speed="2000" data-stop="1035">0</span>
-                        <div class="counter-title"><h5>Service Done</h5></div>
+                        <span class="count-text" data-speed="2000" data-stop="853">0</span>
+                        <div class="counter-title"><h5>Mantenimientos</h5></div>
                     </div>
                 </div>
 
@@ -433,7 +436,7 @@
                     <div class="inner-box">
                         <div class="icon-box"><span class="flaticon-boy-broad-smile"></span></div>
                         <span class="count-text" data-speed="2000" data-stop="1226">0</span>
-                        <div class="counter-title"><h5>Happy Client</h5></div>
+                        <div class="counter-title"><h5>Clientes felices</h5></div>
                     </div>
                 </div>
 
@@ -442,7 +445,7 @@
                     <div class="inner-box">
                         <div class="icon-box"><span class="flaticon-car-1"></span></div>
                         <span class="count-text" data-speed="2000" data-stop="1035">0</span>
-                        <div class="counter-title"><h5>Total Service</h5></div>
+                        <div class="counter-title"><h5>Reparaciones</h5></div>
                     </div>
                 </div>
             </div>
@@ -722,5 +725,13 @@
 <script src="js/mixitup.js"></script>
 <script src="js/script.js"></script>
 <script src="js/color-settings.js"></script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+ <script>
+    new WOW().init();
+    AOS.init({
+				easing: 'ease-out-back',
+				duration: 2000
+			});
+</script>
 </body>
 </html>
