Correciones colores de fondo y logos

--- a/appointment.html
+++ b/appointment.html
@@ -41,7 +41,7 @@
             	<div class="inner-container clearfix">
                     <div class="top-left">
                         <ul class="clearfix">
-                            <li>Autocare is your one stap solution for all auto repair needs!</li>
+                            <li>Para solicitar cualquiera de nuestros Servicios</li>
                             <li><a href="appointment.html">Agende su cita ahora, sin compromiso <i class="fa fa-long-arrow-alt-right"></i></a></li>
                         </ul>
                     </div>
@@ -145,111 +145,45 @@
                         </div>
 
                         <div class="navbar-collapse collapse clearfix" id="navbarSupportedContent1">
-                            <ul class="navigation clearfix">
-                                <li class="dropdown"><a href="#">Home</a>
-                                        <ul>
-                                            <li><a href="index.html">Homepage One</a></li>
-                                            <li><a href="index-2.html">Homepage Two</a></li>
-                                            <li><a href="index-3.html">Homepage Three</a></li>
-											<li><a href="index-4.html">Homepage Four</a></li>
-                                            <li class="dropdown"><a href="#">Header Styles</a>
-                                                <ul>
-                                                    <li><a href="index.html">Header Style One</a></li>
-                                                    <li><a href="index-2.html">Header Style Two</a></li>
-                                                    <li><a href="index-3.html">Header Style Three</a></li>
-													<li><a href="index-4.html">Header Style Four</a></li>
-                                                </ul>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                <li class="current dropdown"><a href="#">About</a>
-                                    <ul>
-                                        <li><a href="about.html">About</a></li>
-                                        <li><a href="appointment.html">Appointment</a></li>
-                                        <li><a href="team.html">Team</a></li>
-                                        <li><a href="price.html">Price</a></li>
-                                        <li><a href="coming-soon.html">Coming Soon</a></li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown"><a href="#">Projects</a>
-                                    <ul>
-                                        <li><a href="project.html">Project</a></li>
-                                        <li><a href="project-detail.html">Project Detail</a></li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown"><a href="#">Services</a>
-                                    <ul>
-                                        <li><a href="services.html">Services 01</a></li>
-                                        <li><a href="services-2.html">Services 02</a></li>
-                                        <li><a href="service-detail.html">Services Single</a></li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown has-mega-menu"><a href="#">Pages</a>
-                                    <div class="mega-menu">
-                                        <div class="mega-menu-bar row clearfix">
-                                            <div class="column col-md-3 col-sm-3 col-xs-12">
-                                                <h3>About Us</h3>
-                                                <ul>
-                                                    <li><a href="team.html">Team</a></li>
-                                                    <li><a href="team-single.html">Team Single</a></li>
-                                                    <li><a href="testimonials.html">Testimonial</a></li>
-                                                    <li><a href="faq.html">FAQ's</a></li>
-                                                    <li><a href="coming-soon.html">Coming Soon</a></li>
-                                                </ul>
-                                            </div>
-                                            <div class="column col-md-3 col-sm-3 col-xs-12">
-                                                <h3>Solutions</h3>
-                                                <ul>
-                                                    <li><a href="service-detail.html">Solutions</a></li>
-                                                    <li><a href="service-detail.html">Chemical Engineering</a></li>
-                                                    <li><a href="service-detail.html">Energy & Power Engineering</a></li>
-                                                    <li><a href="service-detail.html">Oil & Gas Engineering</a></li>
-                                                    <li><a href="service-detail.html">Civil Engineering</a></li>
-                                                </ul>
-                                            </div>
-                                            <div class="column col-md-3 col-sm-3 col-xs-12">
-                                                <h3>Blog</h3>
-                                                <ul>
-                                                    <li><a href="blog.html">Our Blog</a></li>
-                                                    <li><a href="blog-classic.html">Blog Classic</a></li>
-                                                    <li><a href="blog-left-sidebar.html">Blog Left Sidebar</a></li>
-                                                    <li><a href="blog-right-sidebar.html">Blog Right Sidebar</a></li>
-                                                    <li><a href="blog-detail.html">Blog Details</a></li>
-                                                </ul>
-                                            </div>
+							<ul class="navigation clearfix">
+								<li><a href="index.html">Home</a></li>
+								<li class="dropdown"><a href="nosotros.html">Nosotros</a></li>
+								<li class="dropdown"><a href="locales.html">Locales</a></li>
+								<li class="dropdown has-mega-menu"><a href="servicios.html">Servicios</a>
+									<div class="mega-menu">
+										<div class="mega-menu-bar row clearfix">
+											<div class="column col-md-4 col-sm-4 col-xs-12">
+												<h3>Planchado y Pintura</h3>
+												<ul>
+													<li><a href="planchado-pintura.html">Planchado y Pintura por Paños</a></li>
+													<li><a href="tratamiento.html">Tratamiento de Pintura</a></li>
+													<li><a href="reparacion-aros">Reparación y Pintura de Aros</a></li>
+													<li><a href="pintura-express">Pintura Express</a></li>
+												</ul>
+											</div>
+											<div class="column col-md-4 col-sm-4 col-xs-12">
+												<h3>Mecánica</h3>
+												<ul>
+													<li><a href="inspeccion-diagnostico.html">Inspección y Diagnóstico</a></li>
+													<li><a href="mantenimiento.html">Mantenimiento</a></li>
+													<li><a href="frenos.html">Frenos</a></li>
+													<li><a href="suspension.html">Suspensión / Dirección</a></li>
+													<li><a href="refrigeracion.html">Refrigeración</a></li>
+												</ul>
+											</div>
 
-                                            <div class="column col-md-3 col-sm-3 col-xs-12">
-                                                <h3>Shop</h3>
-                                                <ul>
-                                                    <li><a href="shop.html">Shop</a></li>
-                                                    <li><a href="shop-single.html">Product Details</a></li>
-                                                    <li><a href="shoping-cart.html">Cart Page</a></li>
-                                                    <li><a href="checkout.html">Checkout Page</a></li>
-                                                    <li><a href="login.html">Registration Page</a></li>
-                                                </ul>
-                                            </div>
-
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="dropdown"><a href="#">News</a>
-                                    <ul>
-                                        <li><a href="blog.html">News</a></li>
-                                        <li><a href="blog-detail.html">News Detail</a></li>
-                                        <li><a href="error-page.html">Error Page</a></li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown"><a href="#">Shop</a>
-                                    <ul>
-                                        <li><a href="shop.html">Products</a></li>
-                                        <li><a href="shop-single.html">Products Detail</a></li>
-                                        <li><a href="checkout.html">Checkout</a></li>
-                                        <li><a href="cart.html">Shopping Cart</a></li>
-                                        <li><a href="login.html">Registration</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="contact.html">Contact</a></li>
-                            </ul>
+										</div>
+									</div>
+								</li>
+								<li class="dropdown"><a href="area-clientes.html">Area Clientes</a>
+									<ul>
+										<li><a href="agendar-cita.html">Agendar una Cita</a></li>
+										<li><a href="seguimiento.html">Seguimiento</a></li>
+										<li><a href="actualizar-datos.html">Actualizar Datos</a></li>
+									</ul>
+								</li>
+								<li><a href="contact.html">Contacto</a></li>
+							</ul>
                         </div>
                     </nav><!-- Main Menu End-->
                 </div>
