se agregaron animaciones a la pagina nostros

--- a/about.html
+++ b/about.html
@@ -362,7 +362,7 @@
             <div class="row clearfix">
                 <!-- Content Column -->
                 <div data-aos="fade-up"
-                data-aos-duration="3000" class="content-column col-lg-12 col-md-12 col-sm-12 col-xl-12 ">
+                data-aos-duration="3000" data-aos-offset="200" class="content-column col-lg-12 col-md-12 col-sm-12 col-xl-12 ">
                     <h2 class="text-center">La Empresa</h2>
                     <h4 class="text-center">Reparacion y servicio automotriz</h4>
                     <div class="primary-text">Ofrecemos una amplia variedad de servicios que se ajustan a las necesidades del cliente. </div>
@@ -378,7 +378,7 @@
                 <!-- Image Column -->
                 <div class="row mx-1 pt-4 px-2 row-cols-1 row-cols-md-2 g-4 my-5 bg-light wow fadeInUp">
                     <div class=" col-lg-4 col-md-6 col-sm-12 mb-4">
-                      <div data-aos="slide-right" class="card">
+                      <div data-aos="slide-right" data-aos-offset="200" data-aos-duration="3000" class="card">
                         <img src="./images/mision.jpg " class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Mision</h5>
@@ -387,7 +387,7 @@
                       </div>
                     </div>
                     <div class=" col-lg-4 col-md-6 col-sm-12 mb-4">
-                      <div data-aos="zoom-out" class="card ">
+                      <div data-aos="zoom-in" data-aos-offset="200" data-aos-duration="3000" class="card ">
                         <img src="./images/vision.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Vision</h5>
@@ -396,7 +396,7 @@
                       </div>
                     </div>
                     <div class="col-lg-4 col-md-12 col-sm-12 mb-4">
-                      <div data-aos="slide-left" class="card">
+                      <div data-aos="slide-left" data-aos-offset="200" data-aos-duration="3000" class="card">
                         <img src="./images/valores.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Politicas de Calidad</h5>
@@ -454,7 +454,8 @@
     <!-- End Fact counter -->
 
     <!-- Why Us Section -->
-    <section class="why-us-section">
+    <section data-aos="fade-up"
+    data-aos-duration="3000" class="why-us-section">
         <div class="auto-container">
 
             <!-- Features Tab -->
@@ -517,17 +518,23 @@
                     <div class="btn-column col-lg-5 col-md-12 col-sm-12">
                         <!--Tab Btns-->
                         <ul class="tab-btns tab-buttons clearfix">
-                            <li data-tab="#feature-tab-1" class="tab-btn">
+                            <li data-aos="fade-left"
+                            data-aos-offset="200"
+                            data-aos-duration="1000"
+                            data-tab="#feature-tab-1" class="tab-btn">
                                 <div class="icon-box"><span class="flaticon-check-engine"></span></div>
                                 <h3>Modron Workshop</h3>
                                 <p>Suus satis. Quod etiam optime. Vos ite post eum, fistulae, nunquam … </p>
                             </li>
-                            <li data-tab="#feature-tab-2" class="tab-btn active-btn">
+                            <li data-aos="zoom-in" data-aos-offset="200" data-aos-duration="1000" data-tab="#feature-tab-2" class="tab-btn active-btn">
                                 <div class="icon-box"><span class="flaticon-avatar-1"></span></div>
                                 <h3>Talented workers</h3>
                                 <p>Suus satis. Quod etiam optime. Vos ite post eum, fistulae, nunquam … </p>
                             </li>
-                            <li data-tab="#feature-tab-3" class="tab-btn ">
+                            <li data-aos="fade-left"
+                            data-aos-offset="200"
+                            data-aos-duration="1000"
+                            data-tab="#feature-tab-3" class="tab-btn ">
                                 <div class="icon-box"><span class="flaticon-tool"></span></div>
                                 <h3>Leading auto specialist</h3>
                                 <p>Suus satis. Quod etiam optime. Vos ite post eum, fistulae, nunquam … </p>
@@ -543,21 +550,22 @@
     <!-- End Why Us Section -->
 
     <!--Clients Section-->
-    <section class="clients-section alternate">
+    <section data-aos="fade-up"
+    data-aos-duration="3000" data-aos-offset="200" class="clients-section alternate">
         <div class="auto-container">
             <div class="sponsors-outer">
                 <!--Sponsors Carousel-->
                 <ul class="sponsors-carousel owl-carousel owl-theme">
-                    <li class="slide-item"><figure class="image-box"><a href="#"><img src="images/clients/1.png" alt=""></a></figure></li>
-                    <li class="slide-item"><figure class="image-box"><a href="#"><img src="images/clients/2.png" alt=""></a></figure></li>
-                    <li class="slide-item"><figure class="image-box"><a href="#"><img src="images/clients/3.png" alt=""></a></figure></li>
-                    <li class="slide-item"><figure class="image-box"><a href="#"><img src="images/clients/4.png" alt=""></a></figure></li>
-                    <li class="slide-item"><figure class="image-box"><a href="#"><img src="images/clients/5.png" alt=""></a></figure></li>
-                    <li class="slide-item"><figure class="image-box"><a href="#"><img src="images/clients/1.png" alt=""></a></figure></li>
-                    <li class="slide-item"><figure class="image-box"><a href="#"><img src="images/clients/2.png" alt=""></a></figure></li>
-                    <li class="slide-item"><figure class="image-box"><a href="#"><img src="images/clients/3.png" alt=""></a></figure></li>
-                    <li class="slide-item"><figure class="image-box"><a href="#"><img src="images/clients/4.png" alt=""></a></figure></li>
-                    <li class="slide-item"><figure class="image-box"><a href="#"><img src="images/clients/5.png" alt=""></a></figure></li>
+                    <li class="slide-item"><figure class="image-box"><a href="#"><img src="images/gallery/Citroen-300x225.png" alt=""></a></figure></li>
+                    <li class="slide-item"><figure class="image-box"><a href="#"><img src="images/gallery/lexus-logo-300x225.png" alt=""></a></figure></li>
+                    <li class="slide-item"><figure class="image-box"><a href="#"><img src="images/gallery/kisspng-volkswagen-group-car-logo-mercedes-benz-5b0c3910a4d3d1.4305990115275276966752-1-300x225.png" alt=""></a></figure></li>
+                    <li class="slide-item"><figure class="image-box"><a href="#"><img src="images/gallery/Audi.png" alt=""></a></figure></li>
+                    <li class="slide-item"><figure class="image-box"><a href="#"><img src="images/gallery/unnamed-1.png" alt=""></a></figure></li>
+                    <li class="slide-item"><figure class="image-box"><a href="#"><img src="images/gallery/Citroen-300x225.png" alt=""></a></figure></li>
+                    <li class="slide-item"><figure class="image-box"><a href="#"><img src="images/gallery/lexus-logo-300x225.png" alt=""></a></figure></li>
+                    <li class="slide-item"><figure class="image-box"><a href="#"><img src="images/gallery/kisspng-volkswagen-group-car-logo-mercedes-benz-5b0c3910a4d3d1.4305990115275276966752-1-300x225.png" alt=""></a></figure></li>
+                    <li class="slide-item"><figure class="image-box"><a href="#"><img src="images/gallery/Audi.png" alt=""></a></figure></li>
+                    <li class="slide-item"><figure class="image-box"><a href="#"><img src="images/gallery/unnamed-1.png" alt=""></a></figure></li>
                 </ul>
             </div>
         </div>
@@ -565,7 +573,8 @@
     <!--End Clients Section-->
 
     <!-- Main Footer -->
-    <footer class="main-footer" style="background-image: url(images/background/4.jpg);">
+    <footer data-aos="fade-up"
+    data-aos-duration="3000" data-aos-offset="200" class="main-footer" style="background-image: url(images/background/4.jpg);">
         <div class="auto-container">
 
             <!--Widgets Section-->
