--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 							<ul class="navigation clearfix">
 								<li><a href="index.html">Home</a></li>
 								<li class="dropdown"><a href="nosotros.html">Nosotros</a></li>
-								<li class="dropdown"><a href="locales.html">Locales</a></li>
+								<li class="dropdown"><a href="./locales.html">Locales</a></li>
 								<li class="dropdown has-mega-menu"><a href="servicios.html">Servicios</a>
 									<div class="mega-menu">
 										<div class="mega-menu-bar row clearfix">
