--- a/about.html
+++ b/about.html
@@ -694,7 +694,7 @@
 <script src="js/wow.js"></script>
 <script src="js/mixitup.js"></script>
 <script src="js/color-settings.js"></script>
-<script src="/js/script.js"></script>
+<script src="js/script.js"></script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
  <script>
     new WOW().init();
