--- a/index.html
+++ b/index.html
@@ -337,42 +337,28 @@
 
 						<div class="navbar-collapse collapse clearfix" id="navbarSupportedContent">
 							<ul class="navigation clearfix">
-								<li><a href="index.html">Home</a></li>
-								<li class="dropdown"><a href="nosotros.html">Nosotros</a></li>
-								<li class="dropdown"><a href="./locales.html">Locales</a></li>
-								<li class="dropdown has-mega-menu"><a href="servicios.html">Servicios</a>
-									<div class="mega-menu">
-										<div class="mega-menu-bar row clearfix">
-											<div class="column col-md-4 col-sm-4 col-xs-12">
-												<h3>Planchado y Pintura</h3>
-												<ul>
-													<li><a href="planchado-pintura.html">Planchado y Pintura por Paños</a></li>
-													<li><a href="tratamiento.html">Tratamiento de Pintura</a></li>
-													<li><a href="reparacion-aros">Reparación y Pintura de Aros</a></li>
-													<li><a href="pintura-express">Pintura Express</a></li>
-												</ul>
-											</div>
-											<div class="column col-md-4 col-sm-4 col-xs-12">
-												<h3>Mecánica</h3>
-												<ul>
-													<li><a href="inspeccion-diagnostico.html">Inspección y Diagnóstico</a></li>
-													<li><a href="mantenimiento.html">Mantenimiento</a></li>
-													<li><a href="frenos.html">Frenos</a></li>
-													<li><a href="suspension.html">Suspensión / Dirección</a></li>
-													<li><a href="refrigeracion.html">Refrigeración</a></li>
-												</ul>
-											</div>
-
-										</div>
-									</div>
-								</li>
-								<li class="dropdown"><a href="area-clientes.html">Area Clientes</a>
+								<!--<li><a href="index.html">Home</a></li>-->
+								<li class="dropdown"><a href="index.html">Home</a>
 									<ul>
-										<li><a href="agendar-cita.html">Agendar una Cita</a></li>
-										<li><a href="seguimiento.html">Seguimiento</a></li>
-										<li><a href="actualizar-datos.html">Actualizar Datos</a></li>
+										<li><a href="index.html">Inicio</a></li>
 									</ul>
 								</li>
+								<li class="dropdown"><a href="about.html">About</a>
+									<ul>
+										<li><a href="about.html">Nosotros</a></li>
+									</ul>
+								</li>
+								<li class="dropdown"><a href="locales.html">Locals</a>
+									<ul>
+										<li><a href="locales.html">Locales</a></li>
+									</ul>
+								</li>
+								<li class="dropdown"><a href="servicios.html">Services</a>
+									<ul>
+										<li><a href="servicios.html">Servicios</a></li>
+									</ul>
+								</li>
+
 								<li><a href="contact.html">Contacto</a></li>
 							</ul>
 						</div>
