--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 									<li><a href="index-4.html">Homepage Four</a></li>
                                 </ul>
                             </li>
-                            <li class="dropdown"><a href="#">About</a>
+                            <li class="dropdown"><a href="./about.html">About</a>
                             	<ul>
                                 	<li><a href="#menu-back">Go Back</a></li>
                                 	<li><a href="about.html">About</a></li>
@@ -338,7 +338,8 @@
 						<div class="navbar-collapse collapse clearfix" id="navbarSupportedContent">
 							<ul class="navigation clearfix">
 								<li><a href="index.html">Home</a></li>
-								<li class="dropdown"><a href="nosotros.html">Nosotros</a></li>
+								<li class="dropdown"><a href="about.html">Nosotros</a></li>
+							
 								<li class="dropdown"><a href="./locales.html">Locales</a></li>
 								<li class="dropdown has-mega-menu"><a href="servicios.html">Servicios</a>
 									<div class="mega-menu">
